--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,17 +2,6 @@ html {
     --mobile-width:850px;
     --nav-height:40px;
     --footer-background:rgba(0, 0, 0, 0.2);
-/* 
-    --main-background-color:#f0f0f0;
-    --menu-background-color:#ebebeb;
-    --black: #1d1d1d;
-    --black-weak: #2b2b2b;
-    --gray: #737373;
-    --gray-weak:#919191;
-    --whitegray:#a5a5a5;
-    --whitegray-weak:rgb(209, 209, 209);
-    --navbar-background-color:#fafafa;
-    --code-background:#e3eaf2; */
 }
 
 html[data-theme="light"] {
