--- a/src/app/layout.module.css
+++ b/src/app/layout.module.css
@@ -10,7 +10,7 @@
 
 #content {
     display: flex;
-    width:100%;
+    width:1000px;
     min-height:100vh;
     flex-direction: row;
     justify-content: space-around;
